--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             한번에 쓸어담기
           </div>
           <div class="contents2">
-         틱톡으로 번돈으로 무언가를 사고중입니다.
+         틱톡으로 번돈으로 무언가를 사는중입니다.
           </div>
               <div class="more">
                 MORE
